force-app/main/default/objects/Demo_Object__c/Demo_Object__c.object-meta.xml
<CustomObject>
    <label>Dealer</label>
    <nameField>
        <label>Dealers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>