force-app/main/default/objects/Demo_Object__c/fields/Dealer_City__c.field-meta.xml
<CustomField>
    <fullName>Dealer_City__c</fullName>
    <label>Dealer City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>