force-app/main/default/objects/Demo_Object__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <label>Dealer Email</label>
    <type>Email</type>
</CustomField>